@@ -1,5 +1,9 @@
 2016-06-09  Ted Thompson  <ted@federalproductions.com>
 
+	* KOAS-DPCamera.cs: Reformatted Code
+
+2016-06-09  Ted Thompson  <ted@federalproductions.com>
+
 	* KOAS-DPCamera.cs: 
 
 2016-22-5  Ted Thompson  <ted@federalproductions.com>
